# rust-travel-router

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  Packages  README.md  Release  cross-build.sh  travel-net_0.1.0-1_amd64.deb  travel-net_0.1.0-1_arm64.deb  travel-net_0.1.0-1_armhf.deb
config/etc/travel-net/: config.json
debian/: changelog  control  copyright  postinst  prerm  rules  travel-net.service
dists/stable/: Release
dists/stable/main/binary-arm64/: Packages
dists/stable/main/binary-armhf/: Packages
nftables/: travel-net.nft
pool/main/: travel-net_0.1.0-1_arm64.deb  travel-net_0.1.0-1_armhf.deb
src/: config.rs  main.rs  templates.rs
src/ap/: apply.rs  hostapd.rs  interface.rs  mod.rs  networkmanager.rs
src/dhcp/: mod.rs
src/firewall/: mod.rs
src/system/: clients.rs  interfaces.rs  mod.rs  reboot.rs  uptime.rs
src/web/: api.rs  auth.rs  mod.rs  pages.rs
src/wifi/: connect.rs  mod.rs  scan.rs  status.rs
static/: style.css
templates/: config.html  error.html  index.html  login.html  logs.html  scan.html  setup.html
