[package]
name = "travel-net"
version = "0.1.0"
edition = "2021"
description = "Travel NAT Router with web UI — turn any Linux SBC into a WiFi NAT router"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tower = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
ipnetwork = "0.20"
regex = "1"
